# fews-openapi-py-client

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  config.yml  pyproject.toml
.github/workflows/: publish-to-pypi.yml
fews-openapi-py-client/: pyproject.toml
fews_openapi_py_client/: __init__.py  types.py
fews_openapi_py_client/models/: __init__.py  acknowledgeforecasternotes_body.py  archiveattributes_document_format.py  archivelocations_document_format.py  archivenetcdfstorageforecasts_document_format.py  archiveparameters_document_format.py  archiveproducts_document_format.py  archiveproductsid_document_format.py  archivesources_document_format.py  colorsdefault_document_format.py  dashboards_document_format.py  displaygroupsnodes_document_format.py  dynamicreportdisplays_use_last_value.py  filters_document_format.py  filtersactions_document_format.py  filtersactions_include_non_resampled.py  filtersactions_use_display_units.py  filtersselected_document_format.py  flags_document_format.py  flagsources_document_format.py  forecasternotesdelete_body.py  importstatus_document_format.py  lastrefreshtime_document_format.py  locations_document_format.py  locations_include_time_dependency.py  locations_show_attributes.py  locations_show_parent_locations.py  locations_show_time_series_infos.py  locationsselected_document_format.py  logdisplayslog_display_idaction_body.py  logdisplayslog_display_idlogs_document_format.py  logdisplayslog_display_idlogs_source.py  moduleruntimes_document_format.py  oas_pijson.py  parametersselected_document_format.py  post_what_if_scenarios_single_run_what_if.py  postarchiveproducts_body.py  postforecasternotes_body.py  postmodifiers_body.py  postmodifiers_commit_modifiers.py  (+80 more)
scripts/: postprocess_client.py
(+315 files in other folders)
