[project]
name = "fews-openapi-py-client"
version = "0.1.0"
description = "A client library for accessing Delft-FEWS Web Services REST API v1"
authors = []
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.23.0,<0.29.0",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0",
    "pre-commit>=4.4.0",
    "openapi-python-client>=0.28.1",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fews_openapi_py_client"]
include = ["CHANGELOG.md", "fews_openapi_py_client/py.typed"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["F", "I", "UP", "E", "N", "W"]
ignore = ["E501", "N818"]
